--- a/app/app.component.html
+++ b/app/app.component.html
@@ -1,10 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+<header>
+
+  <h1>
+    {{title}}
+  </h1>
+</header>
+<main>
+
+
+  <section class="todo-list">
+
+<div class="todo-item">
+посрать
+</div>
+  </section>
+</main>
